--- a/demos/terminalizer/demo.yml
+++ b/demos/terminalizer/demo.yml
@@ -9,7 +9,7 @@ config:
   
   # Specify the current working directory path
   # the default is the current working directory path
-  cwd: /home/jch/Terminalizer
+  cwd: /home/jch/Code/flamingo-docs/demos/terminalizer
   
   # Export additional ENV variables
   env:
@@ -42,7 +42,7 @@ config:
   # Maximum delay between frames in ms
   # Ignored if the `frameDelay` isn't set to `auto`
   # Set to `auto` to prevent limiting the max idle time
-  maxIdleTime: 5000
+  maxIdleTime: auto
   
   # The surrounding frame box
   # The `type` can be null, window, floating, or solid`
@@ -50,7 +50,7 @@ config:
   # Don't forget to add a backgroundColor style with a null as type
   frameBox:
     type: floating
-    title: Downloading a HDF5 dataset in python
+    title: Python
     style:
       border: 0px black solid
       # boxShadow: none
@@ -82,7 +82,7 @@ config:
   fontSize: 14
   
   # The height of lines
-  lineHeight: 1.2
+  lineHeight: 1
   
   # The spacing between letters
   letterSpacing: 0
@@ -112,106 +112,88 @@ config:
 # Records, feel free to edit them
 records:
   - delay: 1
+    content: "\r"
+  - delay: 500
+    content: '>>> '
+  - delay: 2000
+    content: import hdfstream
+  - delay: 200
+    content: "\r\n"
+  - delay: 200
+    content: '>>> '
+  - delay: 2000
+    content: 'flamingo = hdfstream.open("cosma", "/FLAMINGO")'
+  - delay: 500
     content: "\r\n"
   - delay: 500
     content: '>>> '
   - delay: 2000
-    content: "import hdfstream\r\n"
+    content: >-
+      snap =
+      flamingo["L1_m10/L1_m10/snapshots/flamingo_0077/flamingo_0077.hdf5"]
   - delay: 500
+    content: "\r\n"
+  - delay: 200
     content: '>>> '
   - delay: 2000
-    content: "flamingo = hdfstream.open(\"https://dataweb.cosma.dur.ac.uk:8443/hdfstream\", \"/FLAMINGO\")\r\n"
+    content: 'bh_pos = snap["PartType5/Coordinates"][...]'
   - delay: 500
-    content: ">>> "
-  - delay: 2000
-    content: "snap = flamingo[\"L1000N0900/HYDRO_FIDUCIAL/snapshots/flamingo_0077/flamingo_0077.hdf5\"]\r\n"
+    content: "\r\n"
   - delay: 500
-    content: '>>> '
-  - delay: 2000
-    content: "bh_pos = snap[\"PartType5/Coordinates\"][...]\r\n"
-  - delay: 1381
-    content: "\rSlice: /PartType5/Coordinates:   3%|▌                  | 1.05M/38.1M [00:00<00:08, 4.31MB/s]"
+    content: "\rSlice: /PartType5/Coordinates:   3%|▌                  | 1.05M/38.1M [00:00<00:08, 4.16MB/s]"
+  - delay: 220
+    content: "\rSlice: /PartType5/Coordinates:   6%|█                  | 2.10M/38.1M [00:00<00:08, 4.09MB/s]"
+  - delay: 227
+    content: "\rSlice: /PartType5/Coordinates:   8%|█▌                 | 3.15M/38.1M [00:00<00:08, 4.31MB/s]"
+  - delay: 223
+    content: "\rSlice: /PartType5/Coordinates:  11%|██                 | 4.19M/38.1M [00:01<00:08, 4.11MB/s]"
+  - delay: 169
+    content: "\rSlice: /PartType5/Coordinates:  17%|███▏               | 6.29M/38.1M [00:01<00:04, 6.37MB/s]"
   - delay: 176
-    content: "\rSlice: /PartType5/Coordinates:   6%|█                  | 2.10M/38.1M [00:00<00:06, 5.16MB/s]"
-  - delay: 142
-    content: "\rSlice: /PartType5/Coordinates:   8%|█▌                 | 3.15M/38.1M [00:00<00:05, 5.96MB/s]"
-  - delay: 133
-    content: "\rSlice: /PartType5/Coordinates:  11%|██                 | 4.19M/38.1M [00:00<00:05, 6.61MB/s]"
-  - delay: 157
-    content: "\rSlice: /PartType5/Coordinates:  14%|██▌                | 5.24M/38.1M [00:00<00:04, 6.63MB/s]"
-  - delay: 129
-    content: "\rSlice: /PartType5/Coordinates:  17%|███▏               | 6.29M/38.1M [00:00<00:04, 7.07MB/s]"
-  - delay: 128
-    content: "\rSlice: /PartType5/Coordinates:  19%|███▋               | 7.34M/38.1M [00:01<00:04, 7.40MB/s]"
-  - delay: 130
-    content: "\rSlice: /PartType5/Coordinates:  22%|████▏              | 8.39M/38.1M [00:01<00:03, 7.61MB/s]"
-  - delay: 128
-    content: "\rSlice: /PartType5/Coordinates:  25%|████▋              | 9.44M/38.1M [00:01<00:03, 7.77MB/s]"
-  - delay: 131
-    content: "\rSlice: /PartType5/Coordinates:  28%|█████▏             | 10.5M/38.1M [00:01<00:03, 7.85MB/s]"
-  - delay: 130
-    content: "\rSlice: /PartType5/Coordinates:  30%|█████▊             | 11.5M/38.1M [00:01<00:03, 7.91MB/s]"
+    content: "\rSlice: /PartType5/Coordinates:  22%|████▏              | 8.39M/38.1M [00:01<00:03, 7.98MB/s]"
+  - delay: 166
+    content: "\rSlice: /PartType5/Coordinates:  28%|█████▏             | 10.5M/38.1M [00:01<00:02, 9.28MB/s]"
   - delay: 160
-    content: "\rSlice: /PartType5/Coordinates:  33%|██████▎            | 12.6M/38.1M [00:01<00:03, 7.45MB/s]"
-  - delay: 125
-    content: "\rSlice: /PartType5/Coordinates:  36%|██████▊            | 13.6M/38.1M [00:01<00:03, 7.70MB/s]"
-  - delay: 130
-    content: "\rSlice: /PartType5/Coordinates:  39%|███████▎           | 14.7M/38.1M [00:02<00:02, 7.81MB/s]"
-  - delay: 130
-    content: "\rSlice: /PartType5/Coordinates:  41%|███████▊           | 15.7M/38.1M [00:02<00:02, 7.89MB/s]"
-  - delay: 130
-    content: "\rSlice: /PartType5/Coordinates:  44%|████████▎          | 16.8M/38.1M [00:02<00:02, 7.94MB/s]"
-  - delay: 128
-    content: "\rSlice: /PartType5/Coordinates:  47%|████████▉          | 17.8M/38.1M [00:02<00:02, 8.00MB/s]"
-  - delay: 129
-    content: "\rSlice: /PartType5/Coordinates:  50%|█████████▍         | 18.9M/38.1M [00:02<00:02, 8.04MB/s]"
-  - delay: 127
-    content: "\rSlice: /PartType5/Coordinates:  52%|█████████▉         | 19.9M/38.1M [00:02<00:02, 8.10MB/s]"
-  - delay: 230
-    content: "\rSlice: /PartType5/Coordinates:  55%|██████████▍        | 21.0M/38.1M [00:02<00:02, 6.56MB/s]"
-  - delay: 212
-    content: "\rSlice: /PartType5/Coordinates:  61%|███████████▌       | 23.1M/38.1M [00:03<00:01, 7.77MB/s]"
-  - delay: 204
-    content: "\rSlice: /PartType5/Coordinates:  66%|████████████▌      | 25.2M/38.1M [00:03<00:01, 8.60MB/s]"
-  - delay: 129
-    content: "\rSlice: /PartType5/Coordinates:  69%|█████████████      | 26.2M/38.1M [00:03<00:01, 8.50MB/s]"
-  - delay: 129
-    content: "\rSlice: /PartType5/Coordinates:  72%|█████████████▌     | 27.3M/38.1M [00:03<00:01, 8.41MB/s]"
-  - delay: 130
-    content: "\rSlice: /PartType5/Coordinates:  74%|██████████████▏    | 28.3M/38.1M [00:03<00:01, 8.32MB/s]"
-  - delay: 128
-    content: "\rSlice: /PartType5/Coordinates:  77%|██████████████▋    | 29.4M/38.1M [00:03<00:01, 8.27MB/s]"
-  - delay: 131
-    content: "\rSlice: /PartType5/Coordinates:  80%|███████████████▏   | 30.4M/38.1M [00:03<00:00, 8.20MB/s]"
-  - delay: 127
-    content: "\rSlice: /PartType5/Coordinates:  83%|███████████████▋   | 31.5M/38.1M [00:04<00:00, 8.22MB/s]"
-  - delay: 129
-    content: "\rSlice: /PartType5/Coordinates:  85%|████████████████▏  | 32.5M/38.1M [00:04<00:00, 8.19MB/s]"
-  - delay: 129
-    content: "\rSlice: /PartType5/Coordinates:  88%|████████████████▋  | 33.6M/38.1M [00:04<00:00, 8.18MB/s]"
-  - delay: 130
-    content: "\rSlice: /PartType5/Coordinates:  91%|█████████████████▎ | 34.6M/38.1M [00:04<00:00, 8.15MB/s]"
-  - delay: 129
-    content: "\rSlice: /PartType5/Coordinates:  94%|█████████████████▊ | 35.7M/38.1M [00:04<00:00, 8.14MB/s]"
-  - delay: 131
-    content: "\rSlice: /PartType5/Coordinates:  96%|██████████████████▎| 36.7M/38.1M [00:04<00:00, 8.09MB/s]"
-  - delay: 128
-    content: "\rSlice: /PartType5/Coordinates:  99%|██████████████████▊| 37.7M/38.1M [00:04<00:00, 8.13MB/s]"
-  - delay: 37
-    content: "\rSlice: /PartType5/Coordinates: 100%|███████████████████| 38.1M/38.1M [00:04<00:00, 7.74MB/s]\r\n>>> "
-  - delay: 986
+    content: "\rSlice: /PartType5/Coordinates:  33%|██████▎            | 12.6M/38.1M [00:01<00:02, 10.3MB/s]"
+  - delay: 191
+    content: "\rSlice: /PartType5/Coordinates:  39%|███████▎           | 14.7M/38.1M [00:01<00:02, 10.6MB/s]"
+  - delay: 182
+    content: "\rSlice: /PartType5/Coordinates:  44%|████████▎          | 16.8M/38.1M [00:02<00:01, 10.9MB/s]"
+  - delay: 153
+    content: "\rSlice: /PartType5/Coordinates:  50%|█████████▍         | 18.9M/38.1M [00:02<00:01, 11.6MB/s]"
+  - delay: 149
+    content: "\rSlice: /PartType5/Coordinates:  55%|██████████▍        | 21.0M/38.1M [00:02<00:01, 12.3MB/s]"
+  - delay: 158
+    content: "\rSlice: /PartType5/Coordinates:  61%|███████████▌       | 23.1M/38.1M [00:02<00:01, 12.6MB/s]"
+  - delay: 157
+    content: "\rSlice: /PartType5/Coordinates:  66%|████████████▌      | 25.2M/38.1M [00:02<00:01, 12.8MB/s]"
+  - delay: 163
+    content: "\rSlice: /PartType5/Coordinates:  72%|█████████████▌     | 27.3M/38.1M [00:02<00:00, 12.8MB/s]"
+  - delay: 215
+    content: "\rSlice: /PartType5/Coordinates:  77%|██████████████▋    | 29.4M/38.1M [00:03<00:00, 11.7MB/s]"
+  - delay: 154
+    content: "\rSlice: /PartType5/Coordinates:  83%|███████████████▋   | 31.5M/38.1M [00:03<00:00, 12.2MB/s]"
+  - delay: 152
+    content: "\rSlice: /PartType5/Coordinates:  88%|████████████████▋  | 33.6M/38.1M [00:03<00:00, 12.6MB/s]"
+  - delay: 160
+    content: "\rSlice: /PartType5/Coordinates:  94%|█████████████████▊ | 35.7M/38.1M [00:03<00:00, 12.8MB/s]"
+  - delay: 152
+    content: "\rSlice: /PartType5/Coordinates:  99%|██████████████████▊| 37.7M/38.1M [00:03<00:00, 13.1MB/s]"
+  - delay: 22
+    content: "\rSlice: /PartType5/Coordinates: 100%|███████████████████| 38.1M/38.1M [00:03<00:00, 10.3MB/s]\r\n>>> "
+  - delay: 1871
     content: b
-  - delay: 192
+  - delay: 279
     content: h
-  - delay: 448
+  - delay: 504
     content: _
-  - delay: 224
+  - delay: 312
     content: p
-  - delay: 144
+  - delay: 160
     content: o
-  - delay: 80
+  - delay: 136
     content: s
-  - delay: 800
-    content: "\r\narray([[647.09332453, 525.01021453, 596.72949453],\r\n       [649.50443453, 524.32232453, 595.73500453],\r\n       [655.38784453, 524.25411453, 593.82007453],\r\n       ...,\r\n       [996.605247  , 991.522947  ,  65.621977  ],\r\n       [992.153247  , 997.536347  ,  85.505107  ],\r\n       [987.125527  , 995.554607  ,  88.407337  ]], shape=(1586233, 3))\r\n>>> "
-  - delay: 5000
+  - delay: 1000
+    content: "\r\narray([[647.09332453, 525.01021453, 596.72949453],\r\n       [649.50443453, 524.32232453, 595.73500453],\r\n       [655.38784453, 524.25411453, 593.82007453],\r\n       ...,\r\n       [996.605247  , 991.522947  ,  65.621977  ],\r\n       [992.153247  , 997.536347  ,  85.505107  ],\r\n       [987.125527  , 995.554607  ,  88.407337  ]])\r\n>>> "
+  - delay: 8000
     content: "\r\n"
