--- a/maven/src/main/webapp/WEB-INF/web.xml
+++ b/maven/src/main/webapp/WEB-INF/web.xml
@@ -23,4 +23,18 @@
     </user-data-constraint>
   </security-constraint>
 
+  <!-- Set very short cache expiry during development -->
+  <filter>
+    <filter-name>ExpiresFilter</filter-name>
+    <filter-class>org.apache.catalina.filters.ExpiresFilter</filter-class>
+    <init-param>
+      <param-name>ExpiresByType text/html</param-name>
+      <param-value>access plus 1 second</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>ExpiresFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
 </web-app>
